--- a/.github/workflows/os_scraper.yml
+++ b/.github/workflows/os_scraper.yml
@@ -2,7 +2,7 @@ name: Run OS Scraper Daily
 
 on:
   schedule:
-    - cron: "0 8 * * *"  # Every day at 08:00 UTC
+    - cron: "0 21 * * *"  # Every day at 9:00 PM UTC, which is 7:00 AM AEST
   workflow_dispatch:      # Allows manual trigger
 
 jobs:
