--- a/.github/workflows/os_scraper.yml
+++ b/.github/workflows/os_scraper.yml
@@ -29,7 +29,8 @@ jobs:
           git config user.email "github-actions@github.com"
           git add latest_os_versions.csv
           git commit -m "Update CSV [auto]" || echo "No changes to commit"
-          git pull --rebase || git rebase --skip
+          git pull --no-edit
+
 
           git push
         env:
