--- a/.github/workflows/os_scraper.yml
+++ b/.github/workflows/os_scraper.yml
@@ -23,16 +23,16 @@ jobs:
       - name: Run Python script
         run: python os_scraper.py
 
-      -- name: Commit and push CSV
-          run: |
-            git config user.name "github-actions"
-            git config user.email "github-actions@github.com"
-            git pull --rebase -X ours
-            git add latest_os_versions.csv
-            git commit -m "Update CSV [auto]" || echo "No changes to commit"
-            git push
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     - name: Commit and push CSV
+  run: |
+    git config user.name "github-actions"
+    git config user.email "github-actions@github.com"
+    git pull -X ours --no-edit
+    git add latest_os_versions.csv
+    git commit -m "Update CSV [auto]" || echo "No changes to commit"
+    git push
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
 
