--- a/.github/workflows/os_scraper.yml
+++ b/.github/workflows/os_scraper.yml
@@ -9,8 +9,12 @@ jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+     - name: Checkout repository
+  uses: actions/checkout@v3
+  with:
+    fetch-depth: 0           # Full history to allow proper merge
+    persist-credentials: true
+
 
       - name: Set up Python
         uses: actions/setup-python@v4
