--- a/.github/workflows/os_scraper.yml
+++ b/.github/workflows/os_scraper.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install pandas
+  run: pip install pandas requests beautifulsoup4
 
       - name: Run Python script
         run: python os_scraper.py
