--- a/.github/workflows/os_scraper.yml
+++ b/.github/workflows/os_scraper.yml
@@ -29,8 +29,8 @@ jobs:
 
      - name: Commit and push CSV
   run: |
-    git config user.name "github-actions"
-    git config user.email "github-actions@github.com"
+   git config user.name "laineyyork-esa"
+git config user.email "216996747+laineyyork-esa@users.noreply.github.com"
 
     git add latest_os_versions.csv
     git commit -m "Update CSV [auto]" || echo "No changes to commit"
