--- a/.github/workflows/os_scraper.yml
+++ b/.github/workflows/os_scraper.yml
@@ -27,13 +27,13 @@ jobs:
       - name: Run Python script
         run: python os_scraper.py
 
-      -- name: Commit and push CSV
-  run: |
-    git config user.name "laineyyork-esa"
-    git config user.email "216996747+laineyyork-esa@users.noreply.github.com"
+         - name: Commit and push CSV
+        run: |
+          git config user.name "laineyyork-esa"
+          git config user.email "216996747+laineyyork-esa@users.noreply.github.com"
 
-    git add latest_os_versions.csv
-    git commit -m "Update CSV [auto]" || echo "No changes to commit"
-    git push origin main
-  env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git add latest_os_versions.csv
+          git commit -m "Update CSV [auto]" || echo "No changes to commit"
+          git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
